--- a/facebook-cube/index.html
+++ b/facebook-cube/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Log In to Facebook VR</title>
+    <title>Log In to WebVR Demo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://cdn.auth0.com/js/auth0/9.3.1/auth0.min.js"></script>
     <script src="https://cdn.auth0.com/js/lock/11.5.2/lock.min.js"></script>
@@ -40,7 +40,8 @@
                 localStorage.setItem("accessToken", authResult.accessToken);
                 localStorage.setItem("profile", JSON.stringify(profile));
 
-                // Update DOM
+                //Go to VR Page
+                window.location.replace('stage.html');
             });
         });
 
